# playground-failure

./: .gitignore  CMakeLists.txt  README.md
docs/: ADDING_A_SCENARIO.md  ARCHITECTURE.md  FIX_PLAN.md
include/playground/: chaos_io.h  chaos_mem.h  chaos_net.h  chaos_thread.h  event.h  runner.h  scenario.h
scripts/: scaffold_scenario.sh
src/: main.c
src/chaos/: chaos_io.c  chaos_mem.c  chaos_net.c  chaos_thread.c
src/core/: rand.c  rand.h  registry.c  runner.c
src/scenarios/compound/: cascading_failure.c  flaky_environment.c  split_brain.c  thundering_herd.c
src/scenarios/concurrency/: deadlock_classic.c  race_counter.c  thread_cancel_midwrite.c
src/scenarios/memory/: arena_corrupt.c  crash_null_deref.c  double_free.c  uaf_callback.c
src/scenarios/network/: connection_reset.c  packet_loss.c  partial_read.c
src/scenarios/timeio/: clock_jump.c  disk_full.c  jittery_timer.c  partial_write.c  slow_fsync.c
src/tui/: tui.c
tests/golden/: arena_corrupt.jsonl  clock_jump.jsonl  crash_null_deref.jsonl  disk_full.jsonl  double_free.jsonl  partial_write.jsonl  run.sh  uaf_callback.jsonl
tests/unit/: test_arena.c  test_io.c  test_net.c  test_thread.c
